security/policies/kubernetes/kyverno/verify-ecr-image-signature.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-ecr-image-signature
spec:
  validationFailureAction: Enforce
  background: true

  rules:
  ###################################################
  # Rule 1:
  # Only allow ECR images
  ###################################################
  - name: restrict-image-registry
    match:
      any:
        - resources:
            kinds:
              - Pod
    validate:
      message: "Images must come only from AWS ECR"
      pattern:
        spec:
          containers:
            - image: "123456789012.dkr.ecr.us-east-1.amazonaws.com/*"

  ###################################################
  # Rule 2:
  # Verify Cosign Signature
  ###################################################
  - name: verify-image-signature
    match:
      any:
        - resources:
            kinds:
              - Pod
    verifyImages:
      - imageReferences:
          - "123456789012.dkr.ecr.us-east-1.amazonaws.com/*"
        # Replace tag with digest
        #mutateDigest: true

        # Require immutable digest verification
        #verifyDigest: true
        attestors:
          - count: 1
            entries:
              - keys:
                  publicKeys: |-
                    -----BEGIN PUBLIC KEY-----
                    YOUR_COSIGN_PUBLIC_KEY
                    -----END PUBLIC KEY-----
